--- a/package.json
+++ b/package.json
@@ -1,39 +1,72 @@
 {
   "name": "cctv.purwakartakab.go.id",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Website monitoring CCTV modern untuk Kabupaten Purwakarta menggunakan React.js",
+  "main": "index.js",
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "ansi-regex": "^5.0.1",
+    "aria-query": "^5.3.2",
+    "baseline-browser-mapping": "^2.8.23",
+    "browserslist": "^4.27.0",
+    "caniuse-lite": "^1.0.30001753",
+    "convert-source-map": "^2.0.0",
+    "css.escape": "^1.5.1",
+    "debug": "^4.4.3",
+    "dequal": "^2.0.3",
+    "dom-accessibility-api": "^0.5.16",
+    "electron-to-chromium": "^1.5.244",
+    "esbuild": "^0.25.12",
+    "escalade": "^3.2.0",
+    "fdir": "^6.5.0",
+    "gensync": "^1.0.0-beta.2",
+    "indent-string": "^4.0.0",
+    "js-tokens": "^4.0.0",
+    "jsesc": "^3.1.0",
+    "json5": "^2.2.3",
+    "lru-cache": "^5.1.1",
+    "lz-string": "^1.5.0",
+    "min-indent": "^1.0.1",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.11",
+    "node-releases": "^2.0.27",
+    "picocolors": "^1.1.1",
+    "picomatch": "^4.0.3",
+    "postcss": "^8.5.6",
+    "pretty-format": "^27.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-is": "^17.0.2",
+    "react-refresh": "^0.18.0",
+    "redent": "^3.0.0",
+    "rollup": "^4.52.5",
+    "scheduler": "^0.27.0",
+    "semver": "^6.3.1",
+    "source-map-js": "^1.2.1",
+    "strip-indent": "^3.0.0",
+    "tinyglobby": "^0.2.15",
+    "update-browserslist-db": "^1.1.4",
+    "vite": "^7.1.12",
+    "web-vitals": "^2.1.4",
+    "yallist": "^3.1.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xtrayou/cctv.purwakartakab.go.id.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xtrayou/cctv.purwakartakab.go.id/issues"
+  },
+  "homepage": "https://github.com/xtrayou/cctv.purwakartakab.go.id#readme"
 }
