--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "escalade": "^3.2.0",
     "fdir": "^6.5.0",
     "gensync": "^1.0.0-beta.2",
+    "hls.js": "^1.6.14",
     "indent-string": "^4.0.0",
     "js-tokens": "^4.0.0",
     "jsesc": "^3.1.0",
