--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^19.2.0",
     "react-is": "^17.0.2",
     "react-refresh": "^0.18.0",
+    "react-router-dom": "^7.9.5",
     "redent": "^3.0.0",
     "rollup": "^4.52.5",
     "scheduler": "^0.27.0",
