--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Website monitoring CCTV modern untuk Kabupaten Purwakarta menggunakan React.js",
   "main": "index.js",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "admin-lte": "^4.0.0-rc3",
     "ansi-regex": "^5.0.1",
     "aria-query": "^5.3.2",
     "baseline-browser-mapping": "^2.8.23",
+    "bootstrap": "^5.3.8",
     "browserslist": "^4.27.0",
     "caniuse-lite": "^1.0.30001753",
     "convert-source-map": "^2.0.0",
@@ -25,6 +28,7 @@
     "jsesc": "^3.1.0",
     "json5": "^2.2.3",
     "lru-cache": "^5.1.1",
+    "lucide-react": "^0.552.0",
     "lz-string": "^1.5.0",
     "min-indent": "^1.0.1",
     "ms": "^2.1.3",
