--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-tokens": "^4.0.0",
     "jsesc": "^3.1.0",
     "json5": "^2.2.3",
+    "leaflet": "^1.9.4",
     "lru-cache": "^5.1.1",
     "lucide-react": "^0.552.0",
     "lz-string": "^1.5.0",
@@ -41,6 +42,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-is": "^17.0.2",
+    "react-leaflet": "^5.0.0",
     "react-refresh": "^0.18.0",
     "react-router-dom": "^7.9.5",
     "redent": "^3.0.0",
