--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-leaflet": "^5.0.0",
     "react-refresh": "^0.18.0",
     "react-router-dom": "^7.9.5",
+    "react-simple-captcha": "^9.3.1",
     "redent": "^3.0.0",
     "rollup": "^4.52.5",
     "scheduler": "^0.27.0",
